# 2038

./: .gitignore  README.md
.github/workflows/: cli_ci.yml  server_ci.yml
cli/: Cargo.toml  build.rs
cli/src/: main.rs
protos/: twenty38.proto
server/: Cargo.toml
server/src/: main.rs
