[package]
name = "twenty_thirty_eight_server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.22", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
env_logger = "0.9"
log = "0.4"
prost = "0.11.0"
tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.1"

[build-dependencies]
tonic-build = "0.8.0"
